2002-09-11  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : Fix conflicting
	  accelerators.

	* accessibility-keyboard.c (setup_dialog) : connect the simple items
	  before the master.
	(cb_master_enable_toggle) : desensitize the subfeature content if the
	  master switch is disabled.

2002-09-10  Jody Goldberg <jody@gnome.org>

	* gnome-accessibility-keyboard-properties.glade : remove the atk
	  relation when we specify a mnemonic_widget.

2002-09-09  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : on 2nd thought lets disable the 'beep on
	  feature change' if the master switch is off.

	http://bugzilla.gnome.org/show_bug.cgi?id=92488
	* gnome-accessibility-keyboard-properties.glade : tweak accelerators

2002-09-09  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=90936
	* gnome-accessibility-keyboard-properties.glade : Add mnemonic_widget
	  assignments and fix a typo.

2002-08-28  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=91854
	* accessibility-keyboard.c : the max slow key delay is 500ms.
	  We clamp that in the settings daemon.  Fix the ui to reflect that.

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1.1

2002-08-06  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1

2002-08-02  jacob berkman  <jacob@ximian.com>

	* *.c: merge recent fixes from HEAD

2002-06-21  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* gnome-accessibility-keyboard-properties.c :
 	 Changed the help link to point to the correct document (#85895)

2002-06-10  Jody Goldberg <jody@gnome.org>

	* accessibility-keyboard.c : tweak the layout as requested and adjust
	  the max slowkey delay to 500 to avoid losing the keyboard due to some
	  sort of an X problem.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

Sun May 26 11:44:41 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-accessibility-keyboard-properties.c (main): use APPID
	instead of argv[0]
