@@ -929,9 +929,7 @@ two keys pressed simultaneously</property>
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
-		      <accessibility>
-			<atkrelation target="mousekeys_init_delay_title" type="label-for"/>
-		      </accessibility>
+		      <property name="mnemonic_widget">mousekeys_init_delay_spin</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
