@@ -1,3 +1,9 @@
+2002-09-13  Calum Benson  <calum.benson@sun.com>
+
+	* theme-switcher.c: (gtk_theme_selection_changed):
+
+	Set icon theme when user switches gtk theme.
+
 2002-08-26  Jody Goldberg <jody@gnome.org>
 
 	* theme-switcher.c (drag_data_received_cb) : unescape the string.
